--- a/src/elements.html
+++ b/src/elements.html
@@ -39,11 +39,7 @@
 
 <link rel="import" href="../bc/polymer-responsive-dialog/responsive-dialog.html">
 
-<!-- Client-side routes. -->
-<link rel="import" href="routing.html">
-
-<link rel="import" href="../styles/app-theme.html">
-<link rel="import" href="../styles/global-styles.html">
+<link rel="import" href="styles/global-styles.html">
 
 <!-- Behavior must come before anything that uses it. -->
 <link rel="import" href="global-behavior.html">
