--- a/src/user-display.html
+++ b/src/user-display.html
@@ -7,7 +7,7 @@
 <link rel="import" href="../bc/polymer/polymer.html">
 
 <!-- External styles for this element -->
-<link rel="import" href="../styles/global-styles.html">
+<link rel="import" href="styles/global-styles.html">
 
 <dom-module id="user-display">
     <template>
