--- a/src/recipe-notifications.html
+++ b/src/recipe-notifications.html
@@ -5,7 +5,11 @@
 <!-- This module listens to toast signals and displays them so that not every
      element needs a paper-toast. -->
 
+<link rel="import" href="../bc/iron-signals/iron-signals.html">
+<link rel="import" href="../bc/paper-toast/paper-toast.html">
 <link rel="import" href="../bc/polymer/polymer.html">
+
+<link rel="import" href="styles/global-styles.html">
 
 <dom-module id="recipe-notifications">
     <template>
