--- a/src/user-display.html
+++ b/src/user-display.html
@@ -4,10 +4,15 @@
 -->
 <!-- This module shows a user card. -->
 
+<link rel="import" href="../bc/iron-ajax/iron-ajax.html">
+<link rel="import" href="../bc/paper-button/paper-button.html">
+<link rel="import" href="../bc/paper-material/paper-material.html">
+<link rel="import" href="../bc/paper-spinner/paper-spinner.html">
 <link rel="import" href="../bc/polymer/polymer.html">
 
-<!-- External styles for this element -->
+<link rel="import" href="global-behavior.html">
 <link rel="import" href="styles/global-styles.html">
+<link rel="import" href="user-form.html">
 
 <dom-module id="user-display">
     <template>
