--- a/src/user-form.html
+++ b/src/user-form.html
@@ -4,11 +4,21 @@
 -->
 <!-- This module displays a user editing form. -->
 
+<link rel="import" href="../bc/iron-icons/iron-icons.html">
+<link rel="import" href="../bc/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../bc/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bc/paper-input/paper-input.html">
+<link rel="import" href="../bc/paper-item/paper-item.html">
+<link rel="import" href="../bc/paper-menu/paper-menu.html">
+<link rel="import" href="../bc/polymer-responsive-dialog/responsive-dialog.html">
 <link rel="import" href="../bc/polymer/polymer.html">
 
+<link rel="import" href="form-behavior.html">
+<link rel="import" href="global-behavior.html">
+
 <dom-module id="user-form">
-    <style include="global-styles"></style>
     <template>
+        <style include="global-styles"></style>
         <responsive-dialog id="dialog"
                    title="[[title]]"
                    dismiss-text="Cancel"
