--- a/src/item-collection.html
+++ b/src/item-collection.html
@@ -9,10 +9,27 @@
      back to the list with the deleted item still showing. Not sure how to
      reload recipes when that happens. -->
 
+<link rel="import" href="../bc/iron-ajax/iron-ajax.html">
+<link rel="import" href="../bc/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../bc/iron-icon/iron-icon.html">
+<link rel="import" href="../bc/iron-icons/iron-icons.html">
+<link rel="import" href="../bc/paper-button/paper-button.html">
+<link rel="import" href="../bc/paper-fab/paper-fab.html">
+<link rel="import" href="../bc/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bc/paper-input/paper-input.html">
+<link rel="import" href="../bc/paper-spinner/paper-spinner.html">
 <link rel="import" href="../bc/polymer/polymer.html">
+
+<link rel="import" href="global-behavior.html">
+<link rel="import" href="recipe-display.html">
+<link rel="import" href="recipe-form.html">
+<link rel="import" href="styles/global-styles.html">
+<link rel="import" href="user-display.html">
+<link rel="import" href="user-form.html">
 
 <dom-module id="item-collection">
     <template>
+        <style include="iron-flex iron-flex-alignment"></style>
         <style include="global-styles"></style>
         <style>
             :host {
