--- a/src/recipe-details.html
+++ b/src/recipe-details.html
@@ -4,10 +4,30 @@
 -->
 <!-- This module allows editing of a recipe. -->
 
+<link rel="import" href="../bc/iron-ajax/iron-ajax.html">
+<link rel="import" href="../bc/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../bc/iron-icon/iron-icon.html">
+<link rel="import" href="../bc/iron-icons/iron-icons.html">
+<link rel="import" href="../bc/paper-button/paper-button.html">
+<link rel="import" href="../bc/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bc/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../bc/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bc/paper-input/paper-input.html">
+<link rel="import" href="../bc/paper-input/paper-textarea.html">
+<link rel="import" href="../bc/paper-item/paper-item.html">
+<link rel="import" href="../bc/paper-material/paper-material.html">
+<link rel="import" href="../bc/paper-menu/paper-menu.html">
+<link rel="import" href="../bc/paper-spinner/paper-spinner.html">
+<link rel="import" href="../bc/paper-toast/paper-toast.html">
 <link rel="import" href="../bc/polymer/polymer.html">
+
+<link rel="import" href="cookie-display.html">
+<link rel="import" href="global-behavior.html">
+<link rel="import" href="styles/global-styles.html">
 
 <dom-module id="recipe-details">
     <template>
+        <style include="iron-flex iron-flex-alignment"></style>
         <style include="global-styles"></style>
         <style>
             :host {
