--- a/src/recipe-display.html
+++ b/src/recipe-display.html
@@ -4,10 +4,20 @@
 -->
 <!-- This module shows a recipe card. -->
 
+<link rel="import" href="../bc/iron-collapse/iron-collapse.html">
+<link rel="import" href="../bc/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../bc/iron-icon/iron-icon.html">
+<link rel="import" href="../bc/iron-icons/iron-icons.html">
+<link rel="import" href="../bc/paper-button/paper-button.html">
+<link rel="import" href="../bc/paper-material/paper-material.html">
 <link rel="import" href="../bc/polymer/polymer.html">
+
+<link rel="import" href="global-behavior.html">
+<link rel="import" href="styles/global-styles.html">
 
 <dom-module id="recipe-display">
     <template>
+        <style include="iron-flex iron-flex-alignment"></style>
         <style include="global-styles"></style>
         <style>
             :host {
