Fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
 </head>
 
 <body unresolved class="fullbleed layout vertical">
-    <photos-app></photos-app>
+    <recipes-app></recipes-app>
 </body>
 </html>
