Fix color and drawer styling

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
     </script>
 
     <link rel="import" href="/src/recipes-app.html">
+<style>
+    body {
+        margin: 0;
+        background-color: #e9e9ef;
+    }
+</style>
 </head>
 
 <body unresolved class="fullbleed layout vertical">
