--- a/src/item-collection.html
+++ b/src/item-collection.html
@@ -40,6 +40,7 @@
             }
             paper-button {
                 margin-top: 1em;
+                background-color: white;
             }
         </style>
 
