--- a/src/styles/global-styles.html
+++ b/src/styles/global-styles.html
@@ -20,6 +20,9 @@
                 --iron-icon-height:     4em;
                 --iron-icon-fill-color: gray;
             }
+            paper-material {
+                background-color: white;
+            }
 
             a.inherit-color {
                 color:              inherit;
@@ -86,13 +89,6 @@
                 padding-top: 1em;
                 display: block;
             }
-
-            .card-item {
-                padding-left: 0.5em;
-                padding-right: 0.5em;
-                padding-top: 0.5em;
-                padding-bottom: 0.5em;
-             }
 
             .page-title {
                 @apply(--paper-font-display2);
