Fix links to recipe-details

--- a/src/global-behavior.html
+++ b/src/global-behavior.html
@@ -33,6 +33,7 @@ recipe_behaviors.global_behavior = {
             value: constants,
         },
     },
+    stop_propagation: e => e.stopPropagation(),
     long_date: function(d) {
         var date = new Date(d);
         return date.toDateString() + ' ' + date.toLocaleTimeString();
