Fix function name typo

--- a/src/recipes-app.html
+++ b/src/recipes-app.html
@@ -92,7 +92,7 @@
             <app-toolbar></app-toolbar>
             <paper-menu selected="[[route_data.page]]"
                     attr-for-selected="name"
-                    on-tap="drawer-toggle">
+                    on-tap="drawer_toggle">
                 <!-- Note: because of how app-route matches, all routes must
                      end with a slash. -->
                 <a name="" href="/">
