Add "/auth" to auth routes

--- a/src/recipes-app.html
+++ b/src/recipes-app.html
@@ -124,7 +124,7 @@
                     </a>
                 </template>
                 <template is="dom-if" if="[[user_name]]">
-                    <a href="/logout">
+                    <a href="/auth/logout">
                         <paper-item>
                             <iron-icon icon="maps:directions-run"></iron-icon>
                             <span>Logout</span>
