Prexis all dynamic routes with /api/
This makes it easier to separate static from dynamic content.

--- a/src/item-collection.html
+++ b/src/item-collection.html
@@ -47,7 +47,7 @@
         <!-- AJAX requests. -->
         <iron-ajax auto method="GET"
                 id="get_items_ajax"
-                url="/[[itemName]]"
+                url="/api/[[itemName]]"
                 params="[[search_filter]]"
                 handle-as="json"
                 last-response="{{items}}"
@@ -58,7 +58,7 @@
         </iron-ajax>
         <iron-ajax id="create_item_ajax"
                 method="POST"
-                url="/[[itemName]]"
+                url="/api/[[itemName]]"
                 body="[[new_item]]"
                 content-type="application/json"
                 handle-as="json"
