Add a space for Edit Mode
Now that the html is being minified with the new polymer tool, there
needs to be an actual space character there that won't be minified away.

--- a/src/recipe-details.html
+++ b/src/recipe-details.html
@@ -102,7 +102,7 @@
                 <template is="dom-if" if="[[!edit_mode]]">
                     Enter
                 </template>
-                Edit Mode
+                &nbsp;Edit Mode
             </paper-button>
 
             <paper-button raised on-tap="open_delete_modal"
