Move all static files under /s/, serve with nginx
Go no logner touches the static files. It's much easier to manage and
tune headers with nginx.  As a bonus, Go should no longer care about its
runtime cwd.

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="application-name" content="Recipes">
-    <link rel="icon" sizes="192x192" href="src/images/touch/chrome-touch-icon-192x192.png">
+    <link rel="icon" sizes="192x192" href="s/src/images/touch/chrome-touch-icon-192x192.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Recipes">
-    <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="s/src/images/touch/apple-touch-icon.png">
 
-    <script src="/bc/webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="/s/bc/webcomponentsjs/webcomponents-lite.js"></script>
 
     <!-- Google Font: Montserrat -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700'
@@ -38,7 +38,7 @@
         window.Polymer.dom = 'shady';
     </script>
 
-    <link rel="import" href="/src/recipes-app.html">
+    <link rel="import" href="/s/src/recipes-app.html">
 <style>
     body {
         margin: 0;
