--- a/src/recipes-app.html
+++ b/src/recipes-app.html
@@ -287,7 +287,7 @@
             user_is_admin: role => role === 'Admin',
             user_is_user: role =>
                 role === 'Admin' || role === 'Moderator' || role === 'User',
-            drawer_toggle: () => {
+            drawer_toggle: function() {
                 if (this.$.drawer_layout.narrow) this.$.drawer.toggle();
             },
         })
